--- a/src/components/molekul/navigasi/navbar.scss
+++ b/src/components/molekul/navigasi/navbar.scss
@@ -1,7 +1,9 @@
 .main-navbar{
     display:flex;
     flex-direction:column;
-   
+    position: sticky;
+    z-index: 999;
+    top: 0px;
 
     
 }
