--- a/src/components/molekul/banner/banner.scss
+++ b/src/components/molekul/banner/banner.scss
@@ -1,12 +1,10 @@
 .banner-main{
     display:flex;
     flex-direction: row;
-    
-   
-   
     height:250px;
     margin-right: 150px;
     margin-left: 150px;
+    justify-content: center;
     
     
 
