--- a/src/components/molekul/content-main/contentMain.scss
+++ b/src/components/molekul/content-main/contentMain.scss
@@ -2,7 +2,7 @@
     display:flex;
     flex-direction:column;
     
-    height:800px;
+    height:420px;
     margin-left: 150px;
 
 }
@@ -12,6 +12,7 @@
     p{
         font-size: 28px;
         font-weight: 700;
+        font-family: 'Kanit', sans-serif;
     }
 }
 
