--- a/src/components/atoms/miniContent/miniContent.scss
+++ b/src/components/atoms/miniContent/miniContent.scss
@@ -1,46 +1,32 @@
 .minicontent-main{
-    height:250px;
-    width:200px;
+    height:5em;
+    width:5em;
     display:flex;
     flex-direction:column;
-    justify-content: center;
-    align-items: center;
+    align-items:center;
+    justify-content:center;
+  
     border-radius: 10px;
     border: 2px solid rgb(182, 172, 172);
     cursor: pointer;
-    transition: padding-bottom 3s;
-    
   
-
-     
-
+   
+    
+    
     p{
-        font-size: 28px;
+        font-size: 0.8em;
         font-weight:600;
-
     }
 
-    &:hover{
-        .minicontent-in{
-            padding-bottom: 10px;
-        }
-
-        p{
-            padding-bottom: 10px;
-
-        }
-        
-
-    }
+  
 
 }
 
 .minicontent-in img{
-    width:100px;
-    height:100px;
-    padding-bottom: 0px;
-    
-    
+    position: relative;
+    width:2em;
+    height:2em;
+    margin-bottom: -1em;
  
 }
 
