--- a/src/components/molekul/banner/banner.scss
+++ b/src/components/molekul/banner/banner.scss
@@ -1,77 +1,26 @@
 .banner-main{
     display:flex;
     flex-direction: row;
-    height:400px;
-    margin-right: 150px;
-    margin-left: 150px;
+    background-color: blue;
+    margin-right: 5%;
+    margin-left: 5%;
     justify-content: center;
-    
-    
-
-}
-
-.banner-left{ 
-    
-    
-    height:400px;
-    width:750px;
     border-radius: 10px;
-
-    
 }
+
+
 
 .banner-left img{
-    height:400px;
-    width:750px;
+    height: 100%;
+    width:100%;
     border-radius: 10px;
 }
 
-.banner-right{ 
-    display:flex;
-    
-    flex-direction: column;
-    height:400px;
-    width: 500px;
-    margin-left: 5px;
-    border-radius: 10px;
-    
-    
-
-}
-
-.banner-right-up{ 
-    
-    
-    height:200px;
-    width:500px;
-    margin-bottom: 3px;
-    border-radius: 10px;
 
 
-}
-
-.banner-right-up img{
-    
-    height:200px;
-    width:500px;
-    border-radius: 10px;
-    
-    
-   
-}
-
-.banner-right-down {
-
-    height:200px;
-    width:500px;
-  
-    border-radius: 10px;
-    
-}
 
 
-.banner-right-down img{
-    height:200px;
-    width:500px;
-    border-radius: 10px;
-}
+
+
+
+
