--- a/src/components/molekul/contentHeader/contentHeader.scss
+++ b/src/components/molekul/contentHeader/contentHeader.scss
@@ -1,5 +1,7 @@
 .contentheader-main{
     display:flex;
     flex-direction:row;
-    justify-content:center;
+    justify-content: space-evenly;
+    margin-left: 8%;
+    margin-right: 8%;
 }
