--- a/src/components/molekul/navigasi/navbar.scss
+++ b/src/components/molekul/navigasi/navbar.scss
@@ -1,48 +1,31 @@
-.main-navbar{
-    display:flex;
-    flex-direction:column;
-    position: sticky;
-    z-index: 999;
-    top: 0px;
 
-    
-}
 
-.navbar-up{
-    background-color: #FFCC00;
-
-    
-}
 
 .navbar-down{
-    height:100px;
+   
     display: flex;
     justify-content:space-around;
+    z-index: 910;
     flex-direction: row;
+    position:sticky;
+    top: 0px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width:100%;
     align-items:center;
-    background-color: #FFCC00;
-    padding-left: 10%;
-    padding-right: 10%;
-
     
-    
+    background-color:rgb(71, 170, 173);
+     
 }
 
 .navbar-logo{
     display:flex;
     flex-direction: row;
     cursor: pointer;
-}
-
-.navbar-logo img{
-    height:45px;
-  
+    margin-left: 5%;
 }
 
 
 
-.navbar-cart{
-    background-color: white;
-    
-}
+
 
