--- a/src/components/atoms/miniContent/miniContent.scss
+++ b/src/components/atoms/miniContent/miniContent.scss
@@ -5,9 +5,10 @@
     flex-direction:column;
     align-items:center;
     justify-content:center;
-  
+    overflow-x: auto;
+    
     border-radius: 10px;
-    border: 2px solid rgb(182, 172, 172);
+    //border: 2px solid rgb(182, 172, 172);
     cursor: pointer;
   
    
