--- a/src/components/atoms/content/content.scss
+++ b/src/components/atoms/content/content.scss
@@ -1,11 +1,11 @@
 .content-main{
     display:flex;
     flex-direction:column;
-   
+    
     background-color:white;
     border:2px solid rgb(180, 179, 179);
-    height:300px;
-    width:200px;
+    height:250px;
+    width:500px;
     border-radius: 10px;
     &:hover{
         cursor: pointer;
@@ -15,30 +15,23 @@
 
     .img-content{
         border-radius: 10px;
-        height:180px;
+        height:50%;
         
     }
     .content-center{
         margin-top: 0px;
-        
-        
         display:flex;
         flex-direction:row;
         justify-content: space-between;
         align-items:center;
 
         img{
-            height: 40px;
-            width:40px;
-            &:hover{
-                height: 44px;
-                width:44px;
-
-            }
+            height: 24px;
+            width:24px;
         }
 
         p{
-            padding-left: 2px;
+            padding-left: 4px;
         }
 
 
@@ -46,11 +39,12 @@
     }
 
     .title-content{
-        padding-top: 5px;
+        
         margin-top: 0 px;
-        font-size: 18px;
+        font-size: 0.8em;
     }
     .price-content{
+        font-size: 0.8em;
         margin-top: -15px;
         font-weight: 600;
     }
