--- a/src/components/molekul/navigasi/navbar.scss
+++ b/src/components/molekul/navigasi/navbar.scss
@@ -12,8 +12,8 @@
     padding-top: 2%;
     padding-bottom: 2%;
     width:100%;
+    height:50px;
     align-items:center;
-    
     background-color:rgb(71, 170, 173);
      
 }
