--- a/src/components/molekul/banner/banner.scss
+++ b/src/components/molekul/banner/banner.scss
@@ -1,7 +1,9 @@
 .banner-main{
     display:flex;
     flex-direction: row;
-    background-color: blue;
+    background-color: #ddd;
+    height:220px;
+
     margin-right: 5%;
     margin-left: 5%;
     justify-content: center;
