--- a/src/components/atoms/content/content.scss
+++ b/src/components/atoms/content/content.scss
@@ -1,6 +1,7 @@
 .content-main{
     display:flex;
     flex-direction:column;
+    margin-right: 20px;
     
     background-color:white;
     border:2px solid rgb(180, 179, 179);
