--- a/src/components/atoms/search/search.scss
+++ b/src/components/atoms/search/search.scss
@@ -2,5 +2,10 @@
     display: flex;
     flex-direction: row;
     align-items:center;
+    background-color:red;
+    justify-content:center;
+    position: sticky;
+    z-index: 999;
+    bottom:30px;
 }
 
