--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -1,10 +1,10 @@
 .button{
     padding: 5px;
-    background-color:#ffcc0000;
+    background-color:rgb(71, 170, 173);
     
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    border:3px solid white;
+    border:3px solid rgb(71, 170, 173);
     height: 40px;
     width: 50px;
     cursor: pointer;
@@ -18,6 +18,7 @@
     width: 20px;
     &:hover{
         opacity: 0.7;
+        height:25px;
     }
  
 
