--- a/src/components/atoms/input/input.scss
+++ b/src/components/atoms/input/input.scss
@@ -1,12 +1,13 @@
 .input-search{
-    height: 40px;
+    height: 35px;
     width: 200px;
     
 
 
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
-    border: 2px solid white;
+    border: 2px solid rgb(71, 170, 173);
+    
     padding-left: 20px;
     
     &:focus{
