--- a/src/components/molekul/content-main/contentMain.scss
+++ b/src/components/molekul/content-main/contentMain.scss
@@ -10,15 +10,19 @@
 
 .content-bukubekas-title{
     padding-left: 2%;
+    
     p{
         font-size: 1.5em;
         font-weight: 700;
         font-family: 'Kanit', sans-serif;
     }
+ 
 }
 
 .content-bukubekas-content{
-    display:flex;
+    overflow-x: auto;
+
+   display:flex;
     flex-direction: row;
     margin-right: 10px;
     padding-left: 5%;
