--- a/src/components/atoms/content/content.scss
+++ b/src/components/atoms/content/content.scss
@@ -6,7 +6,7 @@
     background-color:white;
     border:2px solid rgb(180, 179, 179);
     height:250px;
-    width:500px;
+    max-width:200px;
     border-radius: 10px;
     &:hover{
         cursor: pointer;
