--- a/src/components/atoms/miniContent/miniContent.scss
+++ b/src/components/atoms/miniContent/miniContent.scss
@@ -1,6 +1,6 @@
 .minicontent-main{
-    height:5em;
-    width:5em;
+    height:10%;
+    width:100%;
     display:flex;
     flex-direction:column;
     align-items:center;
