--- a/src/components/molekul/content-main/contentMain.scss
+++ b/src/components/molekul/content-main/contentMain.scss
@@ -1,7 +1,7 @@
 .content-bukubekas{
     display:flex;
     flex-direction:column;
-    width: 500px;
+    width: 80%;
     
     max-height: 500px;
 
@@ -22,9 +22,9 @@
 .content-bukubekas-content{
     overflow-x: auto;
 
-   display:flex;
+    display:flex;
     flex-direction: row;
-    margin-right: 10px;
-    padding-left: 5%;
-    width:500px;
+  
+    padding-left: 10%;
+    width:100%;
 }
