--- a/src/components/atoms/content/content.scss
+++ b/src/components/atoms/content/content.scss
@@ -1,22 +1,23 @@
 .content-main{
     display:flex;
     flex-direction:column;
-    margin-right: 20px;
+    margin-right: 30px;
     
     background-color:white;
     border:2px solid rgb(180, 179, 179);
-    height:250px;
-    max-width:200px;
+    height:270px;
+    width:150px;
     border-radius: 10px;
     &:hover{
         cursor: pointer;
-        padding-top: 2px;
+        box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
         
     }
 
     .img-content{
         border-radius: 10px;
-        height:50%;
+        height:100%;
+        width:150px;
         
     }
     .content-center{
@@ -41,8 +42,8 @@
 
     .title-content{
         
-        margin-top: 0 px;
-        font-size: 0.8em;
+        margin-top: px;
+        font-size: 1em;
     }
     .price-content{
         font-size: 0.8em;
