--- a/src/components/molekul/banner/banner.scss
+++ b/src/components/molekul/banner/banner.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     background-color: #ddd;
     height:260px;
+    box-shadow: 2px 2px 4px rgba(0,0,0,2);
 
     margin-right: 5%;
     margin-left: 5%;
