--- a/src/components/molekul/contentHeader/contentHeader.scss
+++ b/src/components/molekul/contentHeader/contentHeader.scss
@@ -2,9 +2,11 @@
     display:flex;
     flex-direction:row;
     justify-content: space-evenly;
+
     margin-left: 8%;
     margin-right: 8%;
     margin-top: 2%;
+    box-shadow: 2px 2px 4px rgba(0,0,0,2);
  
     
 
