--- a/src/components/molekul/navigasi/navbar.scss
+++ b/src/components/molekul/navigasi/navbar.scss
@@ -15,6 +15,7 @@
     height:50px;
     align-items:center;
     background-color:rgb(71, 170, 173);
+    box-shadow: 0px 3px 0px rgba(0,0,0,0.5);
      
 }
 
