update content title

--- a/src/components/atoms/content/content.scss
+++ b/src/components/atoms/content/content.scss
@@ -42,8 +42,9 @@
 
     .title-content{
         
-        margin-top: px;
+     
         font-size: 1em;
+        font-weight: 700;
     }
     .price-content{
         font-size: 0.8em;
