--- a/src/components/atoms/content/content.scss
+++ b/src/components/atoms/content/content.scss
@@ -4,7 +4,10 @@
     margin-right: 30px;
     
     background-color:white;
-    border:2px solid rgb(180, 179, 179);
+    border-bottom:2px solid rgb(71, 170, 173);
+    border-left:2px solid rgb(71, 170, 173);
+    border-right:2px solid rgb(71, 170, 173);
+
     height:270px;
     width:150px;
     border-radius: 10px;
