update page login

--- a/src/components/atoms/button-login/buttonLogin.scss
+++ b/src/components/atoms/button-login/buttonLogin.scss
@@ -9,4 +9,11 @@
     border-radius: 10px;
     justify-content:center;
     margin-top: 5%;
+    
+        p{
+            color:white;
+            font-size: 15px;
+            font-weight:500;
+            letter-spacing: 1px;
+        }
 }
