update page login

--- a/src/components/atoms/button-login/buttonLogin.scss
+++ b/src/components/atoms/button-login/buttonLogin.scss
@@ -9,6 +9,7 @@
     border-radius: 10px;
     justify-content:center;
     margin-top: 5%;
+    margin-bottom: 5%;
     
         p{
             color:white;
