--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -6,7 +6,7 @@
 .bg-login{
 
   
- 
+ border-bottom-right-radius: 100px ;
 width:85%;
   height: 600px;
   background: rgb(136, 220, 223);
@@ -14,15 +14,16 @@ width:85%;
 }
 
 .blur{
-    padding-top: 10%;
+    padding-top: 2%;
     position: fixed;
     left: 5%;
     right:5%;
+    top:5%;
     display:flex;
     flex-direction:column;
     align-items:center;
-    height: 530px;
-    bottom:6%;
+    height: 90%;
+    
     z-index: 999;
     background: rgba(255, 255, 255, 0.363);
     backdrop-filter: blur(10px);
@@ -46,7 +47,7 @@ width:85%;
     }
     .title-desc{
         font-size:20px;
-        font-weight:200;
+        font-weight:400;
         word-wrap: break-word;
         
 
@@ -64,5 +65,14 @@ width:85%;
             font-weight: 600;
             color:rgb(130, 131, 133);
         }
+
+    
+    }
+
+    .text-other-login{
+        
+            font-size:14px;
+            color: grey;
+        
     }
 }
